public/examples/errors/lex-error-recovery.smol
BEGIN
x : a + b;
y := x - 1;
0asdf := x - y;
END
